--- a/VideoPlayerUWP.csproj
+++ b/VideoPlayerUWP.csproj
@@ -139,6 +139,7 @@
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="SampleVideo25fps.mp4" />
+    <Content Include="VideoMusk30fps.mp4" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
