--- a/VideoPlayerWrapper/VideoPlayerWrapper.vcxproj
+++ b/VideoPlayerWrapper/VideoPlayerWrapper.vcxproj
@@ -272,7 +272,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="VideoPlayerWrapper.h" />
+    <ClInclude Include="VideoPlayerWrap.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -285,7 +285,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="VideoPlayerWrapper.cpp" />
+    <ClCompile Include="VideoPlayerWrap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
